kubernetes/apps/extras/omni/omni/app/udp-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-gateway
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "${OMNI_UDP_LB_IP:=10.9.8.8}"
  listeners:
  - name: wireguard-udp
    protocol: UDP
    port: 50180
    allowedRoutes:
      kinds:
      - kind: UDPRoute
